Added *.rpyb, lint.txt and distribute.txt to ignore list. Rename of "pool14" images.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 #################
 ## Extras
 #################
+distribute.txt
 traceback.txt
+lint.txt
 log.txt
 *.edbkup
+*.rpyb
 *.rpyc
 *.jpg
 
